--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 				age: 30
 			}
 
-			handleClick(e) {
-				console.log(e.target);
+			handleClick = (e) => {
+				console.log(this.state);
 			}
 
-			handleHover(e) {
+			handleHover = (e) => {
 				console.log(e.target, e.pageX);
 			}
 
-			handleCopy(e) {
+			handleCopy = (e) => {
 				console.log("Try being original for once!");
 			}
 
